Fix misaligned doman in link
For a while, `domain` has been difficult to properly align with the
rest of the stuff—after all, we’re pushing it below its normal position
using only CSS.

Recent reddit changes messed this up, so a new solution was needed.
This one sets the vertical align to `text-top`, which is then rectified
to put the domain name at the same position on all devices. Awesome!

--- a/styles/content.styl
+++ b/styles/content.styl
@@ -467,10 +467,13 @@
                     a
                         position relative
                         margin-right 0.2rem
-                        bottom 1px
+                        
+                        // `text-top` happens to put the element below
+                        // the position we want, by its height. So push
+                        // it up by `0.75rem` and it works on everything
+                        bottom 0.75rem
+                        vertical-align text-top
                         font(0.75rem, 400)
-                        .res &
-                            bottom 4px
                             
     .approval-checkmark
         margin-bottom -2px
